--- a/Bind/Src/ListadoIniciativas.fx.yaml
+++ b/Bind/Src/ListadoIniciativas.fx.yaml
@@ -925,7 +925,7 @@ ListadoIniciativas As screen:
                     */
             Height: =Txt_FondoForm1_172.Height -10
             HoverBorderColor: =RGBA(0, 121, 187, 1)
-            Items: =Filter(Col_DominiosGestion,Iniciativa = true)
+            Items: =Filter(Col_BD_Portafolio,Iniciativa = true)
             OnChange: |-
                 =UpdateContext({_VarMostrarCuadroBloqueo:false});
                 If(
@@ -938,8 +938,8 @@ ListadoIniciativas As screen:
             PressedFill: =RGBA(0, 121, 187, 1)
             Reset: |
                 =Valor = "Producto" || Valor = "Proyecto"
-            SearchFields: =["AreadeImpacto"]
-            SearchItems: =Search(Filter(Col_DominiosGestion,Iniciativa),Cmb_FiltroJefePO_3.SearchText,AreadeImpacto)
+            SearchFields: =["Nombre_x0020_Producto_x002f_Proy"]
+            SearchItems: =Search(Filter(Col_BD_Portafolio,Iniciativa = true),Cmb_FiltroJefePO_3.SearchText,Nombre_x0020_Producto_x002f_Proy)
             SelectionFill: =RGBA(0, 121, 187, 1)
             SelectMultiple: =false
             Tooltip: =
