--- a/Bind/Src/ListadoProductoProyecto.fx.yaml
+++ b/Bind/Src/ListadoProductoProyecto.fx.yaml
@@ -3521,7 +3521,7 @@ ListadoProductoProyecto As screen:
                 )
             Height: =Txt_FondoForm1_40.Height -10
             HoverBorderColor: =RGBA(0, 121, 187, 1)
-            Items: =Filter(Col_DominiosGestion,'Categoría Iniciativa'.Value = Dpd_FiltroProyeProd.Selected.Value)
+            Items: =Filter(Col_BD_Portafolio,'Categoría Iniciativa'.Value = Dpd_FiltroProyeProd.Selected.Value)
             OnChange: |
                 =UpdateContext({_VarMostrarCuadroBloqueo:false});
                 If(
@@ -3533,7 +3533,7 @@ ListadoProductoProyecto As screen:
             PaddingLeft: =If(Self.DisplayMode = DisplayMode.Edit, 5, 0)
             PressedFill: =RGBA(0, 121, 187, 1)
             SearchFields: =["Nombre_x0020_Producto_x002f_Proy"]
-            SearchItems: =Search(Filter(Col_DominiosGestion,'Categoría Iniciativa'.Value = Dpd_FiltroProyeProd.Selected.Value),Cmb_FiltroNombre.SearchText,'Nombre Producto/Proyecto')
+            SearchItems: =Search(Filter(Col_BD_Portafolio,'Categoría Iniciativa'.Value = Dpd_FiltroProyeProd.Selected.Value),Cmb_FiltroNombre.SearchText,Nombre_x0020_Producto_x002f_Proy)
             SelectionFill: =RGBA(0, 121, 187, 1)
             SelectMultiple: =false
             Tooltip: =
