--- a/Bind/Src/ModuloPersonaV1.fx.yaml
+++ b/Bind/Src/ModuloPersonaV1.fx.yaml
@@ -3048,7 +3048,7 @@ ModuloPersonaV1 As screen:
             Items: =Col_BD_Dominios
             PressedFill: =RGBA(0, 121, 187, 1)
             SearchFields: =["ComplianceAssetId"]
-            SearchItems: =Search(Col_BD_Dominios,Cmb_CambioDominio_1.SearchText,'Id. de activo de cumplimiento normativo')
+            SearchItems: =Search(Col_BD_Dominios,Cmb_CambioDominio_1.SearchText,ComplianceAssetId)
             SelectMultiple: =false
             Visible: =PopUpBorrar_CasoEspecial && Dpd_SeleccionarAccion_2.Selected.Value = "Movilidad interna"
             Width: =Txt_FondoForm1_198.Width - 27
